...
                VStack {
                    Button {
                        self.presentationMode.wrappedValue.dismiss()
                    } label: {
                        Image(systemName: "multiply.circle" )
                            //.colorMultiply(.red).opacity(0.5)
                            .accessibility(identifier: "StopInPlayer")
                            .foregroundColor(.red)
                            .font(.system(size: 60))
                            .opacity(0.7)
                    }
                    .allowsHitTesting(true)
                    .zIndex(1)
...
                        timerIsRunning = true
                    } label: {
                        Image(systemName: "play.fill" )
                            .font(.system(size: 200))
                            .opacity(0.4)
                    }
                    .accessibility(identifier: "PlayInPlayer")
                    .allowsHitTesting(true)
                    .zIndex(1)
                    Spacer()
                    Button {
                        //print(colorScheme)
                        chordsInSong = getChords()
...
