...
                                        Button {
                                            isPlayed.toggle()
                                        } label: {
                                            Image(systemName: "play")
                                                .font(.system(size: 45))
                                        }
                                        .accessibility(identifier: "PlayInMenu")
                                        .padding()
                                        .foregroundColor(.blue)
                                        .overlay(
                                            Circle()
                                                .stroke(Color.blue, lineWidth: 4)
                                        )
...
